operations tbl
